# crosswrench

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.libs  Makefile.mkc  README.md
cmake/: CreateReleaseFiles.cmake  CrossWrench.cmake  Findpstreams.cmake  Findpystring.cmake
libs/: csv2.cmake  cxxopts.cmake  libzippp.cmake  pstreams.cmake  pystring.cmake
libs/csv2/: LICENSE.csv2  csv2.hpp
libs/cxxopts/: cxxopts.hpp
libs/libzippp/: LICENCE.libzippp  libzippp.cpp  libzippp.h
libs/pystring/: pystring.cpp
man/: crosswrench.1  crosswrench.1.html  crosswrench.man  crosswrench.mdoc  gendocs.mk
src/: config.cpp  config.hpp  dirnames.cpp  dirnames.hpp  execute.cpp  execute.hpp  functions.cpp  functions.hpp  hashlib2botan.cpp  hashlib2botan.hpp  isbase64nopad.cpp  isbase64nopad.hpp  license.cpp  license.hpp  main.cpp  record.cpp  record.hpp  spread.cpp  spread.hpp  tests.cpp  wheel.cpp  wheel.hpp
